submit opcda, update common

--- a/Odenwald.Common/Odenwald.Common.csproj
+++ b/Odenwald.Common/Odenwald.Common.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{712B2914-BF62-4278-BFE2-EB6925760839}</ProjectGuid>
+    <ProjectGuid>{FEF57F91-04C1-4D42-BA2E-737697AB26C1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Odenwald.OpcUaPlugin</RootNamespace>
-    <AssemblyName>Odenwald.OpcUaPlugin</AssemblyName>
+    <RootNamespace>Odenwald.Common</RootNamespace>
+    <AssemblyName>Odenwald.Common</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,28 +30,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net, Version=1.2.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\log4net.2.0.5\lib\net45-full\log4net.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="log4net">
+      <HintPath>..\Odenwald.ConsolePlugin\bin\Debug\log4net.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Opc.Ua.Client, Version=1.2.336.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\libs\Opc.Ua.Client.dll</HintPath>
-    </Reference>
-    <Reference Include="Opc.Ua.Configuration, Version=1.2.336.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\libs\Opc.Ua.Configuration.dll</HintPath>
-    </Reference>
-    <Reference Include="Opc.Ua.Core, Version=1.2.336.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\libs\Opc.Ua.Core.dll</HintPath>
+      <HintPath>..\Odenwald.OpcUaPlugin\bin\Debug\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -61,27 +47,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="OpcUaHelper.cs" />
-    <Compile Include="OpcUaPlugin.cs" />
-    <Compile Include="OpcUaPluginConfig.cs" />
-    <Compile Include="OpcUaMetric.cs" />
+    <Compile Include="Opc\MeasurementDto.cs" />
+    <Compile Include="Opc\OpcMetric.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="OpcUa.config">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Odenwald.Common\Odenwald.Common.csproj">
-      <Project>{fef57f91-04c1-4d42-ba2e-737697ab26c1}</Project>
-      <Name>Odenwald.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Odenwald\Odenwald.csproj">
-      <Project>{bb7a7712-cc11-4d95-83dc-a0ab28714860}</Project>
-      <Name>Odenwald</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
