--- a/Odenwald.Service/app.config
+++ b/Odenwald.Service/app.config
@@ -120,16 +120,16 @@
     <Measurements>
       <!--PollRate = samples/minutes, DeadbandAbsolute = Absolute max difference for a value not to be collected, Relative max difference for a value not to be collected-->
       <Measurement Name="Int32polled" DataType="number" Path="Data.Dynamic.Scalar.Int32Value"
-                   NodeId="ns=2;i=10849" CollectionType="polled" PollInterval="2000" DeadbandAbsolute="0" DeadbandRelative="0.0">
-        <Tags>
-          <Tag Name="region" Value="ny"/>
-          <Tag Name="env" Value="prod"/>
-          <Tag Name="dc" Value="datacenter-1"/>
-        </Tags>
+                   NodeId="ns=2;i=10849" CollectionType="polled" PollInterval="2000" DeadbandAbsolute="0" DeadbandRelative="0.0"
+                   tags="region:ny;env:prod;dc:datacenter-1">
+        
       </Measurement>
       <!--MonitorResolution = ms-->
       <Measurement Name="Int16monitored" DataType="number" Path="Data.Dynamic.Scalar.Int16Value"
-                   NodeId="ns=2;i=10847" CollectionType="monitored" MonitorResolution="1000" DeadbandAbsolute="0" DeadbandRelative="0.0"></Measurement>
+                   NodeId="ns=2;i=10847" CollectionType="monitored" MonitorResolution="1000" DeadbandAbsolute="0" DeadbandRelative="0.0"
+                   tags="region:ny;env:prod;dc:datacenter-1">
+        
+      </Measurement>
 
     </Measurements>
 
