--- a/Odenwald.OpcDaPlugin/OpcDa.config
+++ b/Odenwald.OpcDaPlugin/OpcDa.config
@@ -1,18 +1,14 @@
 ﻿<OpcDa>
   <Settings Url="opcda://localhost/Graybox.Simulator" FailoverTimeout="5000"/>
   <Measurements>
-    <!--PollRate = samples/minutes, DeadbandAbsolute = Absolute max difference for a value not to be collected, Relative max difference for a value not to be collected-->
+    <!--PollInterval = ms, DeadbandAbsolute = Absolute max difference for a value not to be collected, Relative max difference for a value not to be collected-->
     <Measurement Name="Int32polled" DataType="number" Path="Data.Dynamic.Scalar.Int32Value"
-                 NodeId="ns=37;s=10849" CollectionType="polled" PollInterval="1000" DeadbandAbsolute="0" DeadbandRelative="0.0">
-      <Tags>
-        <Tag Name="region" Value="ny"/>
-        <Tag Name="env" Value="prod"/>
-        <Tag Name="dc" Value="datacenter-1"/>
-      </Tags>
+                 NodeId="ns=37;s=10849" CollectionType="polled" PollInterval="1000" DeadbandAbsolute="0" DeadbandRelative="0.0" tags="region:ny;env:prod;dc:datacenter-1">
+
     </Measurement>
     <!--MonitorResolution = ms-->
     <Measurement Name="Int16monitored" DataType="number" Path="Data.Dynamic.Scalar.Int32Value"
-                 NodeId="ns=37;s=10849" CollectionType="monitored" MonitorResolution="1000" DeadbandAbsolute="0" DeadbandRelative="0.0"></Measurement>
+                 NodeId="ns=37;s=10849" CollectionType="monitored" MonitorResolution="1000" DeadbandAbsolute="0" DeadbandRelative="0.0" tags="region:ny;env:prod;dc:datacenter-1"></Measurement>
 
   </Measurements>
 
