--- a/Odenwald.Service/app.config
+++ b/Odenwald.Service/app.config
@@ -4,7 +4,7 @@
     <section name="OdenwaldConfig" type="Odenwald.OdenwaldConfig, Odenwald" />
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     <section name="WindowsPerformanceCounter" type="Odenwald.WindowsPerformanceCounterPlugin.WindowsPerformanceCounterPluginConfig, Odenwald.WindowsPerformanceCounterPlugin" />
-    <section name="OpcUa" type="Odenwald.OpcUaPlugin.OpcUaPluginConfig, Odenwald.OpcUaPlugin" />
+    <section name="OpcUa" type="Odenwald.Common.Opc.OpcPluginConfig, Odenwald.Common" />
     <section name="InfluxDb" type="Odenwald.InfluxDbPlugin.InfluxDbPluginConfig, Odenwald.InfluxDbPlugin" />
   </configSections>
   <!--<log4net configSource="Config\log4net.config" />-->
@@ -37,7 +37,7 @@
       <Plugin Name="OpcUa" Class="Odenwald.OpcUaPlugin.OpcUaPlugin,Odenwald.OpcUaPlugin"
               Enable="true" />
       <Plugin Name="InfluxDb" Class="Odenwald.InfluxDbPlugin.InfluxDbPlugin,Odenwald.InfluxDbPlugin"
-            Enable="true" />
+            Enable="false" />
     </Plugins>
     <MetaData>
       <Tag Name="region" Value="ny"/>
@@ -120,20 +120,40 @@
     <Measurements>
       <!--PollRate = samples/minutes, DeadbandAbsolute = Absolute max difference for a value not to be collected, Relative max difference for a value not to be collected-->
       <Measurement Name="Int32polled" DataType="number" Path="Data.Dynamic.Scalar.Int32Value"
-                   NodeId="ns=2;i=10849" CollectionType="polled" PollInterval="2000" DeadbandAbsolute="0" DeadbandRelative="0.0"
-                   tags="region:ny;env:prod;dc:datacenter-1">
+                  CollectionType="polled" PollInterval="2000" DeadbandAbsolute="0" DeadbandRelative="0.0"
+                   Tags="region:ny;env:prod;dc:datacenter-1">
         
       </Measurement>
       <!--MonitorResolution = ms-->
       <Measurement Name="Int16monitored" DataType="number" Path="Data.Dynamic.Scalar.Int16Value"
-                   NodeId="ns=2;i=10847" CollectionType="monitored" MonitorResolution="1000" DeadbandAbsolute="0" DeadbandRelative="0.0"
-                   tags="region:ny;env:prod;dc:datacenter-1">
+                  CollectionType="monitored" MonitorResolution="1000" DeadbandAbsolute="0" DeadbandRelative="0.0"
+                   Tags="region:ny;env:prod;dc:datacenter-1">
         
       </Measurement>
 
     </Measurements>
 
   </OpcUa>
+
+  <OpcDa>
+    <Settings Url="opcda://localhost/Graybox.Simulator" FailoverTimeout="5000"/>
+    <Measurements>
+      <!--PollRate = samples/minutes, DeadbandAbsolute = Absolute max difference for a value not to be collected, Relative max difference for a value not to be collected-->
+      <Measurement Name="Reg6DoublePolled" DataType="number" Path="storage.numeric.reg06"
+                  CollectionType="polled" PollInterval="2000" DeadbandAbsolute="0" DeadbandRelative="0.0"
+                   Tags="region:ny;env:prod;dc:datacenter-1">
+
+      </Measurement>
+      <!--MonitorResolution = ms-->
+      <Measurement Name="Reg6DoubleMonitored" DataType="number" Path="storage.numeric.reg06"
+                  CollectionType="monitored" MonitorResolution="1000" DeadbandAbsolute="0" DeadbandRelative="0.0"
+                   Tags="region:ny;env:prod;dc:datacenter-1">
+
+      </Measurement>
+
+    </Measurements>
+
+  </OpcDa>
   <InfluxDb>
     <Settings Url="http://172.28.0.150:8086" Interval="3000" Database="odenwald" Username="odenwald" Password="06291" />
   </InfluxDb>
