--- a/Odenwald.Common/Odenwald.Common.csproj
+++ b/Odenwald.Common/Odenwald.Common.csproj
@@ -38,6 +38,7 @@
       <HintPath>..\Odenwald.OpcUaPlugin\bin\Debug\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -48,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Opc\MeasurementDto.cs" />
+    <Compile Include="Opc\OpcPluginConfig.cs" />
     <Compile Include="Opc\OpcMetric.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
