--- a/Odenwald.Service/app.config
+++ b/Odenwald.Service/app.config
@@ -5,7 +5,10 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     <section name="WindowsPerformanceCounter" type="Odenwald.WindowsPerformanceCounterPlugin.WindowsPerformanceCounterPluginConfig, Odenwald.WindowsPerformanceCounterPlugin" />
     <section name="OpcUa" type="Odenwald.Common.Opc.OpcPluginConfig, Odenwald.Common" />
+    <section name="OpcDa" type="Odenwald.Common.Opc.OpcPluginConfig, Odenwald.Common" />
     <section name="InfluxDb" type="Odenwald.InfluxDbPlugin.InfluxDbPluginConfig, Odenwald.InfluxDbPlugin" />
+    <section name="KafkaProducer" type="Odenwald.KafkaProducerPlugin.KafkaProducerPlugin, Odenwald.KafkaProducerPlugin" />
+    <section name="KafkaConsumer" type="Odenwald.KafkaConsumerPlugin.KafkaConsumerPlugin, Odenwald.KafkaConsumerPlugin" />
   </configSections>
   <!--<log4net configSource="Config\log4net.config" />-->
   <!--<OdenwaldConfig configSource="Config\Odenwald.config" />-->
@@ -28,16 +31,22 @@
     </appender>
   </log4net>
   <OdenwaldConfig>
-    <GeneralSettings Interval="2" Timeout="120" StoreRates="false" />
+    <GeneralSettings Interval="10" Timeout="120000" StoreRates="false" /> <!--interval;Timeout =minisecond-->
     <Plugins>
       <Plugin Name="WindowsPerformanceCounter" Class="Odenwald.WindowsPerformanceCounterPlugin.WindowsPerformanceCounterPlugin,Odenwald.WindowsPerformanceCounterPlugin"
              Enable="false" />
       <Plugin Name="Console" Class="Odenwald.ConsolePlugin.ConsolePlugin,Odenwald.ConsolePlugin"
               Enable="true" />
       <Plugin Name="OpcUa" Class="Odenwald.OpcUaPlugin.OpcUaPlugin,Odenwald.OpcUaPlugin"
+              Enable="false" />
+       <Plugin Name="OpcDa" Class="Odenwald.OpcDaPlugin.OpcDaPlugin,Odenwald.OpcDaPlugin"
               Enable="true" />
       <Plugin Name="InfluxDb" Class="Odenwald.InfluxDbPlugin.InfluxDbPlugin,Odenwald.InfluxDbPlugin"
             Enable="false" />
+      <Plugin Name="KafkaProducer" Class="Odenwald.KafkaProducerPlugin.KafkaProducerPlugin,Odenwald.KafkaProducerPlugin"
+         Enable="true" />
+      <Plugin Name="KafkaConsumer" Class="Odenwald.KafkaConsumerPlugin.KafkaConsumerPlugin,Odenwald.KafkaConsumerPlugin"
+        Enable="false" />
     </Plugins>
     <MetaData>
       <Tag Name="region" Value="ny"/>
@@ -136,17 +145,17 @@
   </OpcUa>
 
   <OpcDa>
-    <Settings Url="opcda://localhost/Graybox.Simulator" FailoverTimeout="5000"/>
+    <Settings Url="opcda:///Softing.OPCToolboxDemo_ServerDA.1/{2E565242-B238-11D3-842D-0008C779D775}" FailoverTimeout="5000"/>
     <Measurements>
       <!--PollRate = samples/minutes, DeadbandAbsolute = Absolute max difference for a value not to be collected, Relative max difference for a value not to be collected-->
-      <Measurement Name="Reg6DoublePolled" DataType="number" Path="storage.numeric.reg06"
-                  CollectionType="polled" PollInterval="2000" DeadbandAbsolute="0" DeadbandRelative="0.0"
+      <Measurement Name="IOPDynamicI8Polled" DataType="number" Path="IOP.dynamic.I8"
+                  CollectionType="polled" PollInterval="500" DeadbandAbsolute="0" DeadbandRelative="0.0"
                    Tags="region:ny;env:prod;dc:datacenter-1">
 
       </Measurement>
       <!--MonitorResolution = ms-->
-      <Measurement Name="Reg6DoubleMonitored" DataType="number" Path="storage.numeric.reg06"
-                  CollectionType="monitored" MonitorResolution="1000" DeadbandAbsolute="0" DeadbandRelative="0.0"
+      <Measurement Name="IOPDynamicI1Monitored" DataType="number" Path="IOP.dynamic.I1"
+                  CollectionType="monitored" MonitorResolution="500" DeadbandAbsolute="0" DeadbandRelative="0.0"
                    Tags="region:ny;env:prod;dc:datacenter-1">
 
       </Measurement>
@@ -157,4 +166,12 @@
   <InfluxDb>
     <Settings Url="http://172.28.0.150:8086" Interval="3000" Database="odenwald" Username="odenwald" Password="06291" />
   </InfluxDb>
+  <KafkaProducer>
+    <Settings Url="http://172.28.0.84:9092" Topic="" BatchDelayTime="2000" BatchSize="100" >
+    </Settings>
+  </KafkaProducer>
+  <KafkaConsumer>
+    <Settings Url="http://172.28.0.84:9092" Topic="" BatchDelayTime="2000" BatchSize="100" >
+    </Settings>
+  </KafkaConsumer>
 </configuration>
