--- a/Odenwald.KafkaConsumerPlugin/Odenwald.KafkaConsumerPlugin.csproj
+++ b/Odenwald.KafkaConsumerPlugin/Odenwald.KafkaConsumerPlugin.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BB7A7712-CC11-4D95-83DC-A0AB28714860}</ProjectGuid>
+    <ProjectGuid>{B9A8E446-DB9F-46E9-BFCD-916A3D8424AA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Odenwald</RootNamespace>
-    <AssemblyName>Odenwald</AssemblyName>
+    <RootNamespace>Odenwald.KafkaConsumerPlugin</RootNamespace>
+    <AssemblyName>Odenwald.KafkaConsumerPlugin</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,13 +30,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net, Version=1.2.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
-      <HintPath>..\packages\log4net.2.0.5\lib\net45-full\log4net.dll</HintPath>
+    <Reference Include="kafka-net, Version=0.9.0.65, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\kafka-net.0.9.0.65\lib\net45\kafka-net.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="log4net, Version=1.2.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Odenwald.ConsolePlugin\bin\Debug\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Odenwald.OpcUaPlugin\bin\Debug\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -49,35 +53,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PluginRegistry.cs" />
-    <Compile Include="Config\OdenwaldConfig.cs" />
-    <Compile Include="MetricValue.cs" />
-    <Compile Include="Aggregator.cs" />
-    <Compile Include="Interface\IMetricsPlugin.cs" />
-    <Compile Include="Interface\IMetricsReadPlugin.cs" />
-    <Compile Include="Interface\IMetricsWritePlugin.cs" />
-    <Compile Include="MetricsCollector.cs" />
+    <Compile Include="KafkaConsumerPlugin.cs" />
+    <Compile Include="KafkaConsumerPluginConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Type\Types.cs" />
-    <Compile Include="Util.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
-    <None Include="Config\log4net.config">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="Config\Odenwald.config">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    <None Include="KafkaConsumer.config" />
     <None Include="packages.config" />
-    <None Include="Type\types.db">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Odenwald.Common\Odenwald.Common.csproj">
       <Project>{FEF57F91-04C1-4D42-BA2E-737697AB26C1}</Project>
       <Name>Odenwald.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Odenwald\Odenwald.csproj">
+      <Project>{BB7A7712-CC11-4D95-83DC-A0AB28714860}</Project>
+      <Name>Odenwald</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
