update config file

--- a/Odenwald.KafkaProducerPlugin/KafkaProducer.config
+++ b/Odenwald.KafkaProducerPlugin/KafkaProducer.config
@@ -1,5 +1,5 @@
 ﻿<KafkaProducer>
-  <Settings Url="http://172.28.0.196:9092" Topic="Odenwald" BatchDelayTime="2000" BatchSize="100" >
+  <Settings Url="http://localhost:9092" Topic="Odenwald" BatchDelayTime="2000" BatchSize="100" >
     
   </Settings>
 </KafkaProducer>
