--- a/Odenwald.OpcUaPlugin/opcua.config
+++ b/Odenwald.OpcUaPlugin/opcua.config
@@ -1,5 +1,5 @@
 ﻿<OpcUa>
-  <Settings Url="opc.tcp://ac-l32-m7-lth1:51210/UA/SampleServer" FailoverTimeout="5000"/>
+  <Settings Url="opc.tcp://localhost:51210/UA/SampleServer" FailoverTimeout="5000"/>
   <Measurements>
     <!--PollRate = samples/minutes, DeadbandAbsolute = Absolute max difference for a value not to be collected, Relative max difference for a value not to be collected-->
     <Measurement Name="Int32polled" DataType="number" Path="Data.Dynamic.Scalar.Int32Value"
