--- a/Odenwald.InfluxDbPlugin/InfluxDb.config
+++ b/Odenwald.InfluxDbPlugin/InfluxDb.config
@@ -1,3 +1,3 @@
 ﻿<InfluxDb>
-  <Settings Url="http://172.28.0.208:8086" Interval="3000" Database="odenwald" Username="odenwald" Password="06291" />
+  <Settings Url="http://localhost:8086" Interval="3000" Database="odenwald" Username="odenwald" Password="password" />
 </InfluxDb>
