--- a/Odenwald.App/Odenwald.App.csproj
+++ b/Odenwald.App/Odenwald.App.csproj
@@ -148,7 +148,7 @@ xcopy "$(SolutionDir)Odenwald.KafkaConsumerPlugin\bin\$(ConfigurationName)\*.pdb
 xcopy "$(SolutionDir)Odenwald.KafkaConsumerPlugin\bin\$(ConfigurationName)\*.config" .\Config\*.* /Y</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PreBuildEvent>del "$(SolutionDir)Odenwald.Service\bin\*.*" /Q /F</PreBuildEvent>
+    <PreBuildEvent>del "$(SolutionDir)Odenwald.App\bin\*.*" /Q /F</PreBuildEvent>
   </PropertyGroup>
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
   <Target Name="EnsureBclBuildImported" BeforeTargets="BeforeBuild" Condition="'$(BclBuildImported)' == ''">
